# cloudscraper

./: .gitignore  404.html  BYPASS_FEATURES.md  CHANGELOG.md  COMPLETE_DOCUMENTATION.md  ENHANCED_FEATURES.md  LICENSE  MANIFEST.in  PHASE2_FEATURES.md  README.md  RELEASE_NOTES_3.2.0.md  improved_bypass_demo.py  index.html  mkdocs.yml  pyproject.toml  release_notes_3.8.0.md  reproduce_issue.py  requirements.txt  run_all_tests.py  setup.py  sitemap.xml  verify_ai_captcha.py  verify_all_features.py  verify_comparison.py  verify_hybrid.py  verify_jsd.py
.github/: FUNDING.yml
advanced-usage/: index.html
ai_cloudscraper-3.5.1/cloudscraper/: browser_helper.py
ai_cloudscraper-3.7.8/cloudscraper/: trust_builder.py
ai_cloudscraper-3.8.0/cloudscraper/captcha/: anticaptcha.py
api/: index.html
cloudscraper/: CHANGELOG.md  ENHANCED_FEATURES.md  IMPROVEMENT_SUMMARY.md  README.md  __init__.py  adaptive_timing.py  advanced_fingerprinting.py  anti_detection.py  async_cloudscraper.py  behavioral_simulation.py  challenge_analyzer.py  challenge_predictor.py  challenge_response_system.py  circuit_breaker.py  cloudflare.py  cloudflare_v2.py  cloudflare_v3.py  config.py  cookie_manager.py  enhanced_error_handling.py  enhanced_spoofing.py  exceptions.py  help.py  hybrid_engine.py  hybrid_solver.py  intelligent_challenge_system.py  js_challenge_solver.py  jsd_solver.py  lz_string_custom.py  metrics.py  ml_optimization.py  performance.py  playwright_bypass.py  proxy_manager.py  rate_limiter.py  session_pool.py  setup.py  stealth.py  tls_fingerprinting.py  tls_rotator.py  (+3 more)
cloudscraper/captcha/: 2captcha.py  9kw.py  ai_hybrid.py  ai_obj_det.py  ai_ocr.py  capmonster.py  capsolver.py  deathbycaptcha.py
cloudscraper/examples/: async_example.py  enhanced_bypass_demo.py
cloudscraper/interpreters/: nodejs.py
cloudscraper/pyarmor_runtime_000000/: __init__.py
cloudscraper/tests/: __init__.py
cloudscraper/user_agent/: __init__.py
docs/: advanced-usage.md  api.md  examples.md  getting-started.md  index.md
examples/: advanced_usage.py  boss_mode_bypass.py  features_demo.py  hybrid_engine_demo.py  index.html  parallel_boss_bypass.py  scrape_binance.py  scrape_coinmarketcap.py  scrape_opensea.py
getting-started/: index.html
search/: search_index.json
tests/: conftest.py
